🚀 Fix PERMISSION_DENIED error and implement Firebase best practices - Solved Firebase Admin SDK PERMISSION_DENIED error with proper credentials - Added dedicated /archive endpoint using Admin SDK - Implemented Firebase App Hosting best practices - Added comprehensive documentation and configuration - Verified working: archive/unarchive, auth, build process

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,12 @@ firestore-debug.log
 
 # Local development
 *.local
+
+# Firebase service account keys (sensitive)
+service-account-key.json
+*-service-account-key.json
+
+# Debug and temporary files
+debug-*.js
+test-*.js
+SOLUCION_*.md
