feat: Simplify development workflow to emulator-only - Remove env files and scripts - Include apphosting.local.yaml with public keys - Update docs for emulator-only development

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,1 +1,7 @@
-{"projects":{"default":"weight-challenge-app-dev"}}
+{
+  "projects": {
+    "default": "weight-challenge-app-dev",
+    "development": "weight-challenge-app-dev",
+    "production": "weight-challenge-app-dev"
+  }
+}
