--- a/firebase.json
+++ b/firebase.json
@@ -12,5 +12,16 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "emulators": {
+    "apphosting": {
+      "port": 5002,
+      "rootDirectory": "./",
+      "startCommandOverride": "npm run dev"
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true
   }
-} 
+}
