--- a/.gitignore
+++ b/.gitignore
@@ -91,8 +91,9 @@ firestore-debug.log
 .env.*.local
 *.local.backup*
 
-# Firebase App Hosting Emulator config is now committed
-# apphosting.local.yaml - COMMITTED (contains public keys)
+# Firebase App Hosting Emulator config
+# apphosting.emulator.yaml - COMMITTED (safe to share, uses public keys)
+apphosting.local.yaml
 
 # Firebase service account keys (sensitive)
 service-account-key.json
