--- a/firebase.json
+++ b/firebase.json
@@ -14,12 +14,25 @@
     ]
   },
   "emulators": {
+    "auth": {
+      "port": 9099
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "functions": {
+      "port": 5001
+    },
     "apphosting": {
       "port": 5002,
       "rootDirectory": "./"
     },
+    "hosting": {
+      "port": 5003
+    },
     "ui": {
-      "enabled": true
+      "enabled": true,
+      "port": 4000
     },
     "singleProjectMode": true
   }
