fix: Update apphosting.emulator.yaml to use startCommand for development - Remove buildConfig and use startCommand instead - This should properly inject environment variables into the dev server

--- a/apphosting.emulator.yaml
+++ b/apphosting.emulator.yaml
@@ -32,8 +32,6 @@ runConfig:
     - variable: FIREBASE_EMULATOR_HUB
       value: "localhost:4400"
 
-buildConfig:
-  commands:
-    - npm ci
-    - npm run build
-  outputDir: .next
+# Para desarrollo, usamos el servidor de desarrollo de Next.js
+# pero con las variables de entorno inyectadas
+startCommand: "npm run dev"
